# Copyright (C) 2006 Sean Loaring <sloaring@tec-man.com>
#
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without
# modifications, as long as this notice is preserved.
#
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

local_macros = \
	ax_jm_add_am_macro.m4 \
	ax_jm_add_integration_targets.m4 \
	ax_jm_add_recursive_am_macro.m4 \
	ax_jm_am_macros.m4 \
	ax_jm_boost_date-time.m4 \
	ax_jm_boost_filesystem.m4 \
	ax_jm_boost_progam_options.m4 \
	ax_jm_boost_python.m4 \
	ax_jm_boost_regex.m4 \
	ax_jm_boost_signals.m4 \
	ax_jm_boost_thread.m4 \
	ax_jm_build_settings.m4 \
	ax_jm_check_doxygen.m4 \
	ax_jm_check_doxygen_feature.m4 \
	ax_jm_check_doxygen_format.m4 \
	ax_jm_check_extra_gcc_setting.m4 \
	ax_jm_check_gcc_flag.m4 \
	ax_jm_check_gxx_flag.m4 \
	ax_jm_check_icu.m4 \
	ax_jm_check_readline.m4 \
	ax_jm_check_ssl.m4 \
	ax_jm_compile_check_sizeof.m4 \
	ax_jm_compile_warnings_c.m4 \
	ax_jm_compile_warnings_cxx.m4 \
	ax_jm_config_pkgconfig_in.m4 \
	ax_jm_create_doxyfile.m4 \
	ax_jm_define_constant.m4 \
	ax_jm_do_compile_settings.m4 \
	ax_jm_file_tools.m4 \
	ax_jm_prefix_config_h.m4 \
	ax_jm_rpm_init.m4 \
	ac_python_devel.m4 \
	ac_python_module.m4 \
	ax_python_config_var.m4 \
	ax_with_python.m4 \
	ax_constant.m4 \
	check.m4 \
	dmalloc.m4 \
	mpatrol.m4

make_fragments = \
	rpm.am \
	test_headers.am

EXTRA_DIST = \
	$(local_macros) \
	$(make_fragments)
